Fixed bug where profile image in Message was stretched

--- a/we-talk/src/chat-view/chat-view.css
+++ b/we-talk/src/chat-view/chat-view.css
@@ -104,6 +104,7 @@ body {
     max-width: 50%;
     width: auto;
     float: left;
+    overflow: hidden;
     /* box-shadow: 0 0 2px rgba(0,0,0,.12),0 2px 4px rgba(0,0,0,.24); */
 }
 .msg_image_area {
